commit database first draft

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/layout.css" />
     <title>Cider Falls</title>
-</head>
+  </head>
 
-<body>
-    <main id="container">
-    </main>
+  <body>
+    <header class="header">
+      <h1>Cider Falls</h1>
+    </header>
+    <main id="main-container"></main>
 
-
+    <aside class="guest-sidebar"></aside>
+    <footer class="footer">
+      <span>
+        <h2>Phone: Email: Street:</h2>
+      </span>
+    </footer>
 
     <script type="module" src="./scripts/main.js"></script>
-</body>
-
+  </body>
 </html>
