--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   <div id="services-message"></div>
   <main id="main-container"></main>
 
-  <aside class="guest-sidebar"></aside>
+  <div class="right-sidebar-flexbox">
+    <div class="guest-title">Guest List</div>
+    <aside class="guest-sidebar"></aside> 
+  </div>  
   <footer class="footer">
     <span>
-      <h2>Phone: Email: Street:</h2>
+      <h2>Phone: (000)867-5309 Email: Street:</h2>
     </span>
   </footer>
 
