css commit added images

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
   <div class="right-sidebar-flexbox">
     <div class="guest-title">Guest List</div>
-    <aside class="guest-sidebar"></aside> 
-  </div>  
+    <aside class="guest-sidebar"></aside>
+  </div>
   <footer class="footer">
     <span>
-      <h2>Phone: (000)867-5309 Email: Street:</h2>
+      <h2>Phone: (888)867-5309 Email: Cider.Falls@statepark.com Address: 321 Cider Falls Ln, TN, 37714 </h2>
     </span>
   </footer>
 
