css lookin' good

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 
 <body>
   <header class="header">
-    <h1>Cider Falls</h1>
+    <img src="./images/ciderfalls.png">
   </header>
   <div id="services-message"></div>
-  <main id="main-container"></main>
+  <main id="main-container">
+    <div class="card-front"></div>
+    <div class="card-back"></div>
+
+  </main>
 
   <div class="right-sidebar-flexbox">
-    <div class="guest-title">Guest List</div>
+    <div class="guest-title">
+      <h2>Guest List</h2>
+    </div>
     <aside class="guest-sidebar"></aside>
   </div>
   <footer class="footer">
