--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <div class="guest-title">
       <h2>Guest List</h2>
     </div>
-    <aside class="guest-sidebar"></aside>
+    <aside class="guest-sidebar">
+    </aside>
+    <div class="guest-dropdown"></div>
+    <div class="area-dropdown"></div>
+    <button data-type="movebutton">Move</button>
   </div>
   <footer class="footer">
     <span>
